[gd_scene load_steps=7 format=3 uid="uid://bdbeytccutkm3"]

[ext_resource type="Script" path="res://Scripts/Enemies/Enemy1/enemy_1.gd" id="1_xo0df"]

[sub_resource type="SpriteFrames" id="SpriteFrames_5fhuy"]
animations = [{
"frames": [],
"loop": false,
"name": &"Death",
"speed": 14.0
}, {
"frames": [],
"loop": true,
"name": &"Idle",
"speed": 9.0
}, {
"frames": [],
"loop": true,
"name": &"Walk",
"speed": 7.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ddg2k"]
radius = 11.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jacon"]
size = Vector2(316, 74)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y3hp6"]
size = Vector2(16, 5.125)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_veqq6"]
size = Vector2(24, 27)

[node name="Enemy_ground" type="CharacterBody2D"]
script = ExtResource("1_xo0df")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -2)
scale = Vector2(0.653333, 0.650412)
sprite_frames = SubResource("SpriteFrames_5fhuy")
animation = &"Walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_ddg2k")

[node name="Detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
position = Vector2(0, -22)
shape = SubResource("RectangleShape2D_jacon")

[node name="Death" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Death"]
position = Vector2(0, -15.5625)
shape = SubResource("RectangleShape2D_y3hp6")

[node name="Damage_zone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Damage_zone"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_veqq6")

[connection signal="body_entered" from="Detector" to="." method="_on_detector_body_entered"]
[connection signal="body_exited" from="Detector" to="." method="_on_detector_body_exited"]
[connection signal="body_entered" from="Death" to="." method="_on_death_body_entered"]
[connection signal="body_entered" from="Damage_zone" to="." method="_on_damage_zone_body_entered"]
